Rollensystem erweitert, Zeitverbrauch auf Detailseite

--- a/IvA/Views/Projekte/Details.cshtml
+++ b/IvA/Views/Projekte/Details.cshtml
@@ -39,7 +39,7 @@
                 Zeitbudget
             </dt>
             <dd class="col-sm-4">
-                @ViewBag.Zeitbudget Stunden
+                @ViewBag.timeUsed / @ViewBag.timeBudget Stunden
             </dd>
             <dt class="col-sm-2 FirstLetter">
                 <!--Platzhalter-->
