--- a/IvA/Views/Projekte/ErrorMessage.cshtml
+++ b/IvA/Views/Projekte/ErrorMessage.cshtml
@@ -8,13 +8,13 @@
 
 @switch (Model.DynamicErrorMessage)
 {
-    case 1:<h3>Nur der Projekt-Owner darf Projektdetails anpassen. Finger weg!</h3>break;
-    case 2:<h3>Nur der Projekt-Owner darf Projekte löschen. Finger weg!</h3>break;
+    case 1:<h3>Nur der Projekt-Owner oder ein Admin darf Projektdetails anpassen. Finger weg!</h3>break;
+    case 2:<h3>Nur der Projekt-Owner oder ein Admin darf Projekte löschen. Finger weg!</h3>break;
     case 3:<h3>Die angegebene Frist für ein Arbeitspaket darf nicht später sein als die Deadline des Projektes. Bitte passen sie die Frist an!</h3>break;
     case 4:<h3>Der angegebene ProjectOwner existiert nicht. Bitte wählen sie einen anderen aus!</h3>break;
     case 5:<h3>Das Zeitbudget für ein Arbeitspaket darf nicht negativ sein</h3>break;
     case 6:<h3>Der Nutzer wurde nicht gefunden</h3>break;
-    case 7:<h3></h3>break;
+    case 7:<h3>Sie haben keine Berechtigung um Nutzer zum Projekt hinzuzufügen.</h3>break;
 }
 
 <br />
