--- a/IvA/Views/Admin/ListProjects.cshtml
+++ b/IvA/Views/Admin/ListProjects.cshtml
@@ -9,16 +9,13 @@
     <thead class="bg-table thead-dark">
         <tr>
             <th scope="col" class="FirstLetter" >
-                @Html.DisplayNameFor(model => model.Projektname)
+                Name
             </th>
             <th scope="col" class="FirstLetter">
                 @Html.DisplayNameFor(model => model.Projektersteller)
             </th>
             <th scope="col" class="FirstLetter">
                 @Html.DisplayNameFor(model => model.ErstelltAm)
-            </th>
-            <th scope="col" class="FirstLetter" width="25%">
-                @Html.DisplayNameFor(model => model.Beschreibung)
             </th>
             <th scope="col" class="FirstLetter">
                 @Html.DisplayNameFor(model => model.Deadline)
@@ -45,15 +42,13 @@
                 @Html.DisplayFor(modelItem => item.ErstelltAm)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.Beschreibung)
-            </td>
-            <td>
                 @Html.DisplayFor(modelItem => item.Deadline)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Status)
             </td>
             <td>
+                <a asp-action="Edit" asp-controller="Projekte" asp-route-id="@item.ProjekteId" class="btn btn-primary">Bearbeiten</a>
                 <a asp-action="Delete" asp-controller="Projekte" asp-route-id="@item.ProjekteId" class="btn btn-danger">Löschen</a>
             </td>
         </tr>
