--- a/IvA/Views/Admin/ListUsers.cshtml
+++ b/IvA/Views/Admin/ListUsers.cshtml
@@ -38,6 +38,9 @@
                 <th scope="col" class="FirstLetter">
                     @Html.DisplayNameFor(model => model.Email)
                 </th>
+                <th>
+                    Projekte
+                </th>
                 <th scope="col" class="FirstLetter">
                     Rolle
                 </th>
@@ -57,6 +60,9 @@
                         @Html.DisplayFor(modelItem => item.Email)
                     </td>
                     <td>
+                        <a class="btn btn-primary" asp-action="ListUserProjects" asp-route-userId="@item.Id">Projekte ansehen</a>
+                    </td>
+                    <td>
                         @foreach (var role in await userManager.GetRolesAsync(item))
                         {
                             @role
@@ -65,9 +71,15 @@
                     <td>
                         @if (!User.Identity.Name.Equals(item.UserName))
                         {
-                            <a class="btn btn-danger" asp-action="DeleteUser" asp-route-id="@item.Id">Löschen</a>
-                            <a class="btn btn-orange" asp-action="ChangeRole" asp-route-id="@item.Id">Rolle ändern</a>
-                            <a class="btn btn-dark" style="color: #ffa400" href="#deleteModal" data-toggle="modal" data-whatever="@item.Id" user-id="@item.Id">Open Modal</a>
+                            if (!await userManager.IsInRoleAsync(item, "Admin"))
+                            {
+                                <a class="btn btn-orange" asp-action="ChangeRole" asp-route-id="@item.Id">Admin ernennen</a>
+                            }
+                            else
+                            {
+                                <a class="btn btn-danger" asp-action="DeleteUser" asp-route-id="@item.Id">Nutzer löschen</a>
+                            }
+                            //<a class="btn btn-dark" style="color: #ffa400" href="#deleteModal" data-toggle="modal" data-whatever="@item.Id" user-id="@item.Id">Open Modal</a>
                         }
                     </td>
                 </tr>
