--- a/IvA/Views/Shared/_Layout.cshtml
+++ b/IvA/Views/Shared/_Layout.cshtml
@@ -53,7 +53,7 @@
         <div style="margin-top:100px">
 
             <div class="systemChat align-baseline transparente" id="user_head">
-                <div class="columna " style="background-color: #b4b4b4" id="user_content">
+                <div class="columna " id="user_content">
                     <div class="row" id="xxx">
                         <div id="user_title_bar">
                             <span class="col-sm-9 text-primary" style="color: #ffa400"><strong id="farbe">Online Users</strong></span>
@@ -64,7 +64,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="columna" style="background-color: #b4b4b4" id="message_content">
+                <div class="columna" id="message_content">
                     <div class="row">
                         <div id="chat_title_bar">
                             <span class="col-sm-9 text-primary" id="textziel"><strong><small>CHAT</small></strong></span>
