--- a/IvA/Views/Dashboard/Index.cshtml
+++ b/IvA/Views/Dashboard/Index.cshtml
@@ -40,15 +40,15 @@
                         </h2>
                     </div>
 
-                    <div id="collapseFour" class="collapse card-columns" style="margin-bottom:25px ; min-height:200px" aria-labelledby="headingOne" data-parent="#accordion">
-                        <div class="card-body">
+                    <div id="collapseFour" class="collapse card-columns" style="margin-bottom:25px" aria-labelledby="headingOne" data-parent="#accordion">
+                        <div>
                             @foreach (var item in Model)
                             {
                                 DateTime now = DateTime.Now;
                                 @if (item.Frist <= now.AddDays(3))
                                 @if (item.Frist < now && item.Status != "fertig")
                                 {
-                                <div style="width: 15rem ; margin-bottom:20px ; break-inside:avoid">
+                                <div  class="card-body" style="width: 15rem ; margin-bottom:20px ; break-inside:avoid">
                                     <div class="card-header bg-danger text-center" style="font-size:20px; color:white">
                                         <a style="color: white ; word-wrap: break-word ; hyphens:auto" asp-action="PaketDetails" asp-controller="Projekte" asp-route-id="@item.ArbeitsPaketId">
                                             <svg width="25px" height="25px" style="margin-right:7px" viewBox="0 0 16 16" class="bi bi-box-seam" fill="white" xmlns="http://www.w3.org/2000/svg">
@@ -97,14 +97,14 @@
                         </h2>
                     </div>
 
-                    <div id="collapseThree" class="collapse card-columns" style="margin-bottom:25px; min-height:200px" aria-labelledby="headingOne" data-parent="#accordion">
-                        <div class="card-body">
+                    <div id="collapseThree" class="collapse card-columns" style="margin-bottom:25px" aria-labelledby="headingOne" data-parent="#accordion">
+                        <div >
                             @foreach (var item in Model)
                             {
                                 DateTime now = DateTime.Now;
                                 @if (item.Frist <= now.AddDays(7) && item.Frist > now)
                                 {
-                                <div style="width: 15rem ; margin-bottom:20px">
+                                <div class="card-body" style="width: 15rem ; margin-bottom:20px">
                                     <div class="card-header bg-warning text-center" style="font-size:20px; color:black">
                                         <a style="color: black ; word-wrap: break-word ; hyphens:auto" asp-action="PaketDetails" asp-controller="Projekte" asp-route-id="@item.ArbeitsPaketId">
                                             <svg width="25px" height="25px" style="margin-right:7px" viewBox="0 0 16 16" class="bi bi-box-seam" fill="#black" xmlns="http://www.w3.org/2000/svg">
@@ -153,13 +153,13 @@
                     </div>
 
                     <div id="collapseOne" class="collapse card-columns" style="margin-bottom:25px" aria-labelledby="headingOne" data-parent="#accordion">
-                        <div class="card-body">
+                        <div>
                             @foreach (var item in Model)
                             {
                                 DateTime now = DateTime.Now;
                                 @if (item.Frist >= now.AddDays(7))
                                 {
-                                <div style="width: 15rem ; margin-bottom:20px ; break-inside:avoid">
+                                <div class="card-body" style="width: 15rem ; margin-bottom:20px ; break-inside:avoid">
                                     <div class="card-header bg-dark text-center" style="font-size:20px; color:#ffa400">
                                         <a style="color: #ffa400; word-wrap: break-word ; hyphens:auto" asp-action="PaketDetails" asp-controller="Projekte" asp-route-id="@item.ArbeitsPaketId">
                                             <svg width="25px" height="25px" style="margin-right:7px" viewBox="0 0 16 16" class="bi bi-box-seam" fill="#ffa400" xmlns="http://www.w3.org/2000/svg">
@@ -206,12 +206,12 @@
                     </div>
 
                     <div id="collapseTwo" class="collapse card-columns" style="margin-bottom:25px" aria-labelledby="headingOne" data-parent="#accordion">
-                        <div class="card-body">
+                        <div>
                             @foreach (var item in Model)
                             {
                                 @if (item.Status == "Fertig")
                                 {
-                                <div style="width: 15rem ; margin-bottom:20px ; break-inside:avoid">
+                                <div class="card-body" style="width: 15rem ; margin-bottom:20px ; break-inside:avoid">
                                     <div class="card-header bg-success text-center" style="font-size:20px">
                                         <a style="color: white; word-wrap: break-word ; hyphens:auto" asp-action="PaketDetails" asp-controller="Projekte" asp-route-id="@item.ArbeitsPaketId">
                                             <svg width="25px" height="25px" style="margin-right:7px" viewBox="0 0 16 16" class="bi bi-box-seam" fill="white" xmlns="http://www.w3.org/2000/svg">
