Verbrauchte Arbeitszeit kann nicht negativ werden , Knöpfe in PaketDetails gefixt

--- a/IvA/Views/Projekte/ErrorMessage.cshtml
+++ b/IvA/Views/Projekte/ErrorMessage.cshtml
@@ -15,6 +15,7 @@
     case 5:<h3>Das Zeitbudget für ein Arbeitspaket darf nicht negativ sein</h3>break;
     case 6:<h3>Der Nutzer wurde nicht gefunden</h3>break;
     case 7:<h3>Sie haben keine Berechtigung um Nutzer zum Projekt hinzuzufügen.</h3>break;
+    case 8:<h3>Die Verbrauchte Arbeitszeit darf nicht negativ sein! Bitte korrigieren sie die Zeit.</h3>break;
 }
 
 <br />
